--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Robot Gladiators!</title>
 </head>
 <body>
+    <button class="start-game-button">Start Game</button>
     <script src="./assets/js/game.js"></script>
 </body>
 </html>
